crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{}' @? '$.*';"
---
SelectStmt@0..27
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..26
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..26
      TypeCast@13..17
        AConst@13..17
          Sconst@13..17 "'{}'"
      Whitespace@17..18 " "
      Op@18..20 "@?"
      Whitespace@20..21 " "
      AConst@21..26
        Sconst@21..26 "'$.*'"
  Ascii59@26..27 ";"

