crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@121.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": {\"b\": 1}}', 'lax $.**{0}.b ? (@ > 0)');"
---
SelectStmt@0..70
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..68
    FuncCall@7..68
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..41
        Sconst@24..41 "'{\"a\": {\"b\": 1}}'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..68
        Sconst@43..68 "'lax $.**{0}.b ? (@ > ..."
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

